assets and start of layout

--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -1,26 +1,114 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina3_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vou-mX-igY">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
+                                <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="keo-sr-oKW"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="4I3-nu-epy">
+                                <rect key="frame" x="0.0" y="65" width="320" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Vj7-PV-ff7"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="55V-tQ-xZB">
+                                <rect key="frame" x="0.0" y="109" width="320" height="371"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nwT-8z-opT">
+                                <rect key="frame" x="20" y="129" width="280" height="331"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="epi-2e-hOs">
+                                    <size key="itemSize" width="80" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="coT-Lr-gKd">
+                                        <rect key="frame" x="0.0" y="0.0" width="80" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="80" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" alpha="0.84999999999999998" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="qb6-hS-uBD">
+                                                    <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="G8z-FZ-NnI"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bulbasaur" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cvX-lW-9Aq">
+                                                    <rect key="frame" x="0.0" y="80" width="80" height="20"/>
+                                                    <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="12"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="cvX-lW-9Aq" secondAttribute="bottom" id="0D4-nJ-n8a"/>
+                                            <constraint firstItem="cvX-lW-9Aq" firstAttribute="top" secondItem="qb6-hS-uBD" secondAttribute="bottom" id="1CA-Kh-LIq"/>
+                                            <constraint firstItem="qb6-hS-uBD" firstAttribute="top" secondItem="coT-Lr-gKd" secondAttribute="top" id="1lF-fh-S34"/>
+                                            <constraint firstAttribute="trailing" secondItem="cvX-lW-9Aq" secondAttribute="trailing" id="En5-Lc-beG"/>
+                                            <constraint firstItem="cvX-lW-9Aq" firstAttribute="leading" secondItem="coT-Lr-gKd" secondAttribute="leading" id="EuT-xk-6j7"/>
+                                            <constraint firstAttribute="trailing" secondItem="qb6-hS-uBD" secondAttribute="trailing" id="Ggm-LQ-ilr"/>
+                                            <constraint firstItem="qb6-hS-uBD" firstAttribute="leading" secondItem="coT-Lr-gKd" secondAttribute="leading" id="gks-ko-IM2"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="nwT-8z-opT" firstAttribute="top" secondItem="4I3-nu-epy" secondAttribute="bottom" constant="20" id="4bs-74-uAF"/>
+                            <constraint firstAttribute="trailing" secondItem="vou-mX-igY" secondAttribute="trailing" id="4rO-48-Nud"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="55V-tQ-xZB" secondAttribute="bottom" id="7Yz-Jm-UwA"/>
+                            <constraint firstItem="55V-tQ-xZB" firstAttribute="top" secondItem="4I3-nu-epy" secondAttribute="bottom" id="HS3-6T-fRT"/>
+                            <constraint firstItem="nwT-8z-opT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="LeP-0t-XTF"/>
+                            <constraint firstItem="vou-mX-igY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Lkj-pN-q5m"/>
+                            <constraint firstAttribute="trailing" secondItem="4I3-nu-epy" secondAttribute="trailing" id="P0S-4f-fT5"/>
+                            <constraint firstItem="55V-tQ-xZB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Xbr-n0-Rxd"/>
+                            <constraint firstItem="vou-mX-igY" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="cBg-cF-E5V"/>
+                            <constraint firstAttribute="trailing" secondItem="nwT-8z-opT" secondAttribute="trailing" constant="20" id="cvz-ZQ-G13"/>
+                            <constraint firstItem="4I3-nu-epy" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="dTC-ba-Zt4"/>
+                            <constraint firstAttribute="trailing" secondItem="55V-tQ-xZB" secondAttribute="trailing" id="gGD-pv-w8M"/>
+                            <constraint firstItem="4I3-nu-epy" firstAttribute="top" secondItem="vou-mX-igY" secondAttribute="bottom" id="j0v-FU-QjZ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="nwT-8z-opT" secondAttribute="bottom" constant="20" id="zvg-yR-Qy3"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="116.25" y="122.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="1" width="120" height="120"/>
+        <image name="bg" width="1920" height="1200"/>
+    </resources>
 </document>
